--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="message" id="message"></div>
 
         <script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
-        <script type="text/javascript" src="/script/webRTCreceiver.js">
+        <script type="text/javascript" src="./script/webRTCreceiver.js">
         </script>
     </body>
 </html>
