--- a/send.html
+++ b/send.html
@@ -18,6 +18,6 @@
 
 
         <script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
-        <script type="text/javascript" src="/script/webRTCsender.js"></script>
+        <script type="text/javascript" src="./script/webRTCsender.js"></script>
     </body>
 </html>
