--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             <input type="text" id="sendMessageBox" placeholder="Enter a message..." autofocus="true" />
             <button type="button" id="sendButton">Send</button>
             <button type="button" id="clearMsgsButton">Clear Msgs (Local)</button>
+            <button type="button" id="testMidi">Send Midi Note</button>
         </div>
         <div id="status" class="status"></div>
         <div class="message" id="message"></div>
