--- a/send.html
+++ b/send.html
@@ -3,11 +3,10 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width">
-        <title>WebRTC Messaging sender</title>
+        <title>Pianola Nova sender</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1>WebRTC Messaging sender</h1>
         <div>
             <input type="text" id="sendMessageBox" placeholder="Enter a message..." autofocus="true" />
             <button type="button" id="sendButton">Send</button>
