--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width">
-        <title>Peer-to-Peer Messaging</title>
+        <title>Pianola Nova Reciever</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
