--- a/index.html
+++ b/index.html
@@ -3,22 +3,10 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width">
-        <title>Pianola Nova Reciever</title>
+        <title>Pianola Nova</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div>
-            <input type="text" id="sendMessageBox" placeholder="Enter a message..." autofocus="true" />
-            <button type="button" id="sendButton">Send</button>
-            <button type="button" id="clearMsgsButton">Clear Msgs (Local)</button>
-            <button type="button" id="testMidi">Send Midi Note</button>
-        </div>
-        <div id="status" class="status"></div>
-        <div class="message" id="message"></div>
-
-        <script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
-
-        <script type="module" src="./script/webRTCreceiver.js">
-        </script>
+        <H1>Pianola Nova</H1>
     </body>
 </html>
