record and playback

--- a/p2pmidi.html
+++ b/p2pmidi.html
@@ -12,6 +12,8 @@
             <button type="button" id="sendButton">Send</button>
             <button type="button" id="clearMsgsButton">Clear Msgs (Local)</button>
             <button type="button" id="testMidi">Send Midi Note</button>
+            <button type="button" id="record">Record</button>
+            <button type="button" id="play">Play</button>
         </div>
         <div id="status" class="status"></div>
         <div class="message" id="message"></div>
