--- a/p2pmidi.html
+++ b/p2pmidi.html
@@ -16,6 +16,7 @@
             <button type="button" id="play">Play</button>
         </div>
         <div id="status" class="status"></div>
+        <video id="video"></video>
         <div class="message" id="message"></div>
 
         <script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
