--- a/p2pmidi.html
+++ b/p2pmidi.html
@@ -7,18 +7,19 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div>
-            <input type="text" id="sendMessageBox" placeholder="Enter a message..." autofocus="true" />
-            <button type="button" id="sendButton">Send</button>
-            <button type="button" id="clearMsgsButton">Clear Msgs (Local)</button>
-            <button type="button" id="testMidi">Send Midi Note</button>
-            <button type="button" id="record">Record</button>
-            <button type="button" id="play">Play</button>
-        </div>
-        <div id="status" class="status"></div>
         <video id="video"></video>
-        <div class="message" id="message"></div>
-
+        <div id="console">
+            <div>
+                <input type="text" id="sendMessageBox" placeholder="Enter a message..." autofocus="true" />
+                <button type="button" id="sendButton">Send</button>
+                <button type="button" id="clearMsgsButton">Clear Msgs (Local)</button>
+                <button type="button" id="testMidi">Send Midi Note</button>
+                <button type="button" id="record">Record</button>
+                <button type="button" id="play">Play</button>
+            </div>
+            <div id="status" class="status"></div>
+            <div class="message" id="message"></div>
+        </div>
         <script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
 
         <script type="module" src="./script/webRTCcomms.js">
