hide controlss testmidi by pressing m key

--- a/p2pmidi.html
+++ b/p2pmidi.html
@@ -9,9 +9,7 @@
     <body>
         <video id="video"></video>
         <div id="console">
-            <div>
-                <input type="text" id="sendMessageBox" placeholder="Enter a message..." autofocus="true" />
-                <button type="button" id="sendButton">Send</button>
+            <div id="controls">
                 <button type="button" id="clearMsgsButton">Clear Msgs (Local)</button>
                 <button type="button" id="testMidi">Send Midi Note</button>
                 <button type="button" id="record">Record</button>
